--- a/src/styles/demo/typography.html
+++ b/src/styles/demo/typography.html
@@ -18,8 +18,22 @@
     </style>
   </head>
   <body>
-    <article style="display: flex; justify-content: center;">
-        <div class="row row--gutter-12" style="margin: auto 0;">
+    <article style="align-items: center; display: flex; flex-direction: column;">
+        <div class="row row--gutter-12">
+            <div class="col-8 col-push-2">
+                <h1>Buttons</h1>
+                <button>
+                    <span>Vestibulum hendrerit habitasse tristique faucibus nisl neque felis proin etiam gravida et parturient.</span>
+                </button>
+                <button class="button--ghost">
+                    <span>Vestibulum hendrerit habitasse tristique faucibus nisl neque felis proin etiam gravida et parturient.</span>
+                </button>
+                <button class="button--flat">
+                    <span>Vestibulum hendrerit habitasse tristique faucibus nisl neque felis proin etiam gravida et parturient.</span>
+                </button>
+            </div>
+        </div>
+        <div class="row row--gutter-12">
             <div class="col-8 col-push-2">
                 <h1>Title 1</h1>
                 <p>Vestibulum hendrerit habitasse tristique faucibus nisl neque felis proin etiam gravida et parturient dictumst a mi nam at parturient viverra fermentum ullamcorper a ac. Parturient non suspendisse a aliquam vestibulum consectetur a parturient curabitur consectetur tincidunt hendrerit a molestie a ornare habitasse cubilia. A a justo id dictumst massa vestibulum viverra volutpat enim mauris suspendisse donec nisi suspendisse blandit vestibulum dapibus ridiculus elit.</p>
