--- a/src/styles/demo/typography.html
+++ b/src/styles/demo/typography.html
@@ -25,9 +25,19 @@
                 <button>
                     <span>Vestibulum hendrerit habitasse tristique faucibus nisl neque felis proin etiam gravida et parturient.</span>
                 </button>
+                <button disabled>
+                    <span>Vestibulum hendrerit habitasse tristique faucibus nisl neque felis proin etiam gravida et parturient.</span>
+                </button>
+
+                <h2>Ghost</h2>
                 <button class="button--ghost">
                     <span>Vestibulum hendrerit habitasse tristique faucibus nisl neque felis proin etiam gravida et parturient.</span>
                 </button>
+                <button class="button--ghost" disabled>
+                    <span>Vestibulum hendrerit habitasse tristique faucibus nisl neque felis proin etiam gravida et parturient.</span>
+                </button>
+                
+                <h2>Flat</h2>
                 <button class="button--flat">
                     <span>Vestibulum hendrerit habitasse tristique faucibus nisl neque felis proin etiam gravida et parturient.</span>
                 </button>
