--- a/src/styles/demo/typography.html
+++ b/src/styles/demo/typography.html
@@ -12,7 +12,10 @@
         <div class="row row--gutter-12">
             <div class="col-8 col-push-2">
                 <h1>Buttons</h1>
-                <button class="button">
+                <button>
+                    <span>Vestibulum hendrerit habitasse tristique faucibus nisl neque felis proin etiam gravida et parturient.</span>
+                </button>
+                <button class="primary">
                     <span>Vestibulum hendrerit habitasse tristique faucibus nisl neque felis proin etiam gravida et parturient.</span>
                 </button>
                 <button disabled>
