--- a/src/styles/demo/typography.html
+++ b/src/styles/demo/typography.html
@@ -15,7 +15,10 @@
                 <button>
                     <span>Vestibulum hendrerit habitasse tristique faucibus nisl neque felis proin etiam gravida et parturient.</span>
                 </button>
-                <button class="primary">
+                <button class="button--primary">
+                    <span>Vestibulum hendrerit habitasse tristique faucibus nisl neque felis proin etiam gravida et parturient.</span>
+                </button>
+                <button type="reset">
                     <span>Vestibulum hendrerit habitasse tristique faucibus nisl neque felis proin etiam gravida et parturient.</span>
                 </button>
                 <button disabled>
@@ -26,17 +29,15 @@
                 <button class="button--ghost">
                     <span>Vestibulum hendrerit habitasse tristique faucibus nisl neque felis proin etiam gravida et parturient.</span>
                 </button>
+                <button class="button--ghost button--primary">
+                    <span>Vestibulum hendrerit habitasse tristique faucibus nisl neque felis proin etiam gravida et parturient.</span>
+                </button>
+                <button type="reset" class="button--ghost">
+                    <span>Vestibulum hendrerit habitasse tristique faucibus nisl neque felis proin etiam gravida et parturient.</span>
+                </button>
                 <button class="button--ghost" disabled>
                     <span>Vestibulum hendrerit habitasse tristique faucibus nisl neque felis proin etiam gravida et parturient.</span>
                 </button>
-                
-                <h2>Flat</h2>
-                <button class="button--flat">
-                    <span>Vestibulum hendrerit habitasse tristique faucibus nisl neque felis proin etiam gravida et parturient.</span>
-                </button>
-                <button class="button--flat" disabled>
-                  <span>Vestibulum hendrerit habitasse tristique faucibus nisl neque felis proin etiam gravida et parturient.</span>
-              </button>
             </div>
         </div>
         <div class="row row--gutter-12">
