--- a/src/styles/demo/typography.html
+++ b/src/styles/demo/typography.html
@@ -11,6 +11,20 @@
     <article style="align-items: center; display: flex; flex-direction: column;">
         <div class="row row--gutter-12">
             <div class="col-8 col-push-2">
+                <h1>Inputs</h1>
+                <label>
+                    <span>Label</span>
+                    <div class="input">
+                        <div class="input__addon">Prefix</div>
+                        <div class="input__envelope">
+                            <div class="input__addon">Prefix</div>
+                            <input type="text" placeholder="Placeholder" value="Prefix">
+                            <div class="input__addon">Sufix</div>
+                        </div>
+                        <div class="input__addon">Sufix</div>
+                    </div>
+                </label>
+
                 <h1>Buttons</h1>
                 <button>
                     <span>Vestibulum hendrerit habitasse tristique faucibus nisl neque felis proin etiam gravida et parturient.</span>
