--- a/src/styles/demo/form.html
+++ b/src/styles/demo/form.html
@@ -30,7 +30,9 @@
                         <div class="input__envelope">
                             <input type="text" placeholder="Your domain specific name">
                         </div>
-                        <div class="input__addon">@sebastianbusek.cz</div>
+                        <div class="input__addon">
+                            <span>@sebastianbusek.cz</span>
+                        </div>
                     </div>
                 </label>
                 <label>
@@ -64,9 +66,6 @@
                         <span>Back to the list.</span>
                     </button>
                     <button class="button--primary">
-                        <span>Submit the form</span>
-                    </button>
-                    <button class="button--danger">
                         <span>Submit the form</span>
                     </button>
                 </div>
