--- a/src/styles/demo/typography.html
+++ b/src/styles/demo/typography.html
@@ -31,7 +31,9 @@
                 <label>
                     <span>Label</span>
                     <div class="input">
-                        <div class="input__addon">Prefix</div>
+                        <div class="input__addon">
+                            <span>Prefix</span>
+                        </div>
                         <div class="input__envelope">
                             <div class="input__addon">Prefix</div>
                             <input type="text" placeholder="Placeholder" value="Prefix">
