--- a/src/styles/demo/form.html
+++ b/src/styles/demo/form.html
@@ -25,7 +25,7 @@
             <div class="col-8 col-push-2">
                 <h1>A form</h1>
                 <label>
-                    <span>E-mail</span>
+                    <span class="label">E-mail</span>
                     <div class="input">
                         <div class="input__envelope">
                             <input type="text" placeholder="Your domain specific name">
@@ -36,7 +36,7 @@
                     </div>
                 </label>
                 <label>
-                    <span>Password</span>
+                    <span class="label">Password</span>
                     <div class="input">
                         <div class="input__envelope">
                             <input type="password" placeholder="Secret password">
@@ -45,7 +45,7 @@
                     </div>
                 </label>
                 <label>
-                    <span>Your full name</span>
+                    <span class="label">Your full name</span>
                     <div class="input">
                         <div class="input__envelope">
                             <input type="text" placeholder="Your bird name">
@@ -53,7 +53,7 @@
                     </div>
                 </label>
                 <label>
-                    <span>Job position</span>
+                    <span class="label">Job position</span>
                     <div class="input">
                         <div class="input__envelope">
                             <input type="text">
