--- a/src/styles/demo/typography.html
+++ b/src/styles/demo/typography.html
@@ -29,7 +29,7 @@
                 <div class="box shadow-small"></div>
                 <h1>Inputs</h1>
                 <label>
-                    <span>Label</span>
+                    <span class="label">Label</span>
                     <div class="input">
                         <div class="input__addon">
                             <span>Prefix</span>
@@ -43,14 +43,14 @@
                     </div>
                 </label>
                 <label>
-                        <span>Label</span>
-                        <div class="input">
-                            <div class="input__envelope">
-                                <input type="text" placeholder="Placeholder" value="Prefix">
-                                <div class="input__addon">Sufix</div>
-                            </div>
+                    <span class="label">Label</span>
+                    <div class="input">
+                        <div class="input__envelope">
+                            <input type="text" placeholder="Placeholder" value="Prefix">
+                            <div class="input__addon">Sufix</div>
                         </div>
-                    </label>
+                    </div>
+                </label>
 
                 <h1>Buttons</h1>
                 <button>
