--- a/src/styles/demo/typography.html
+++ b/src/styles/demo/typography.html
@@ -23,6 +23,34 @@
     <article style="align-items: center; display: flex; flex-direction: column;">
         <div class="row row--gutter-12">
             <div class="col-8 col-push-2">
+                <h1>Checkbox</h1>
+                <label class="checkbox checkbox--focused checkbox--indeterminate">
+                    <input type="checkbox"/>
+                    <div class="checkbox__control">
+                        <div class="checkbox__control__icon">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                <g>
+                                    <path fill="none" d="M0 0h24v24H0z"/>
+                                    <path d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z"/>
+                                </g>
+                            </svg>
+                        </div>
+                    </div>
+                </label>
+                <br><br>
+                <label class="checkbox checkbox--focused">
+                    <input type="checkbox"/>
+                    <div class="checkbox__control">
+                        <div class="checkbox__control__icon">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                <g>
+                                    <path fill="none" d="M0 0h24v24H0z"/>
+                                    <path d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z"/>
+                                </g>
+                            </svg>
+                        </div>
+                    </div>
+                </label>
                 <h1>Shadows</h1>
                 <div class="box shadow-large"></div>
                 <div class="box shadow-normal"></div>
