--- a/src/styles/demo/typography.html
+++ b/src/styles/demo/typography.html
@@ -24,8 +24,8 @@
         <div class="row row--gutter-12">
             <div class="col-8 col-push-2">
                 <h1>Checkbox</h1>
-                <label class="checkbox checkbox--focused checkbox--indeterminate">
-                    <input type="checkbox"/>
+                <label class="checkbox checkbox--focused checkbox--indeterminate checkbox--disabled">
+                    <input type="checkbox" checked/>
                     <div class="checkbox__control">
                         <div class="checkbox__control__icon">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
