--- a/src/styles/demo/typography.html
+++ b/src/styles/demo/typography.html
@@ -24,7 +24,7 @@
         <div class="row row--gutter-12">
             <div class="col-8 col-push-2">
                 <h1>Checkbox</h1>
-                <label class="checkbox checkbox--focused checkbox--indeterminate checkbox--disabled">
+                <label class="checkbox checkbox--indeterminate checkbox--disabled">
                     <input type="checkbox" checked/>
                     <div class="checkbox__control">
                         <div class="checkbox__control__icon">
@@ -38,7 +38,49 @@
                     </div>
                 </label>
                 <br><br>
-                <label class="checkbox checkbox--focused">
+                <label class="checkbox checkbox--indeterminate checkbox--disabled">
+                    <input type="checkbox"/>
+                    <div class="checkbox__control">
+                        <div class="checkbox__control__icon">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                <g>
+                                    <path fill="none" d="M0 0h24v24H0z"/>
+                                    <path d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z"/>
+                                </g>
+                            </svg>
+                        </div>
+                    </div>
+                </label>
+                <br><br>
+                <label class="checkbox checkbox--indeterminate" tabindex="0">
+                    <input type="checkbox"/>
+                    <div class="checkbox__control">
+                        <div class="checkbox__control__icon">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                <g>
+                                    <path fill="none" d="M0 0h24v24H0z"/>
+                                    <path d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z"/>
+                                </g>
+                            </svg>
+                        </div>
+                    </div>
+                </label>
+                <br><br>
+                <label class="checkbox" tabindex="0">
+                    <input type="checkbox" checked/>
+                    <div class="checkbox__control">
+                        <div class="checkbox__control__icon">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                <g>
+                                    <path fill="none" d="M0 0h24v24H0z"/>
+                                    <path d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z"/>
+                                </g>
+                            </svg>
+                        </div>
+                    </div>
+                </label>
+                <br><br>
+                <label class="checkbox" tabindex="0">
                     <input type="checkbox"/>
                     <div class="checkbox__control">
                         <div class="checkbox__control__icon">
