--- a/src/styles/demo/typography.html
+++ b/src/styles/demo/typography.html
@@ -23,6 +23,28 @@
     <article style="align-items: center; display: flex; flex-direction: column;">
         <div class="row row--gutter-12">
             <div class="col-8 col-push-2">
+                <h1>Radio</h1>
+                <label class="radio" tabindex="0">
+                    <input type="radio" name="radio-group" checked />
+                    <div class="radio__control"></div>
+                </label>
+                <label class="radio radio--focused" tabindex="0">
+                    <input type="radio" name="radio-group" />
+                    <div class="radio__control"></div>
+                </label>
+                <label class="radio" tabindex="0">
+                    <input type="radio" name="radio-group" />
+                    <div class="radio__control"></div>
+                </label>
+                <br><br>
+                <label class="radio radio--disabled">
+                    <input type="radio" name="radio-disabled" checked />
+                    <div class="radio__control"></div>
+                </label>
+                <label class="radio radio--disabled">
+                    <input type="radio" name="radio-disabled" />
+                    <div class="radio__control"></div>
+                </label>
                 <h1>Checkbox</h1>
                 <label class="checkbox checkbox--indeterminate checkbox--disabled">
                     <input type="checkbox" checked/>
@@ -37,7 +59,6 @@
                         </div>
                     </div>
                 </label>
-                <br><br>
                 <label class="checkbox checkbox--disabled">
                     <input type="checkbox" checked/>
                     <div class="checkbox__control">
@@ -51,7 +72,6 @@
                         </div>
                     </div>
                 </label>
-                <br><br>
                 <label class="checkbox checkbox--indeterminate checkbox--disabled">
                     <input type="checkbox"/>
                     <div class="checkbox__control">
@@ -79,7 +99,6 @@
                         </div>
                     </div>
                 </label>
-                <br><br>
                 <label class="checkbox" tabindex="0">
                     <input type="checkbox" checked/>
                     <div class="checkbox__control">
@@ -93,7 +112,6 @@
                         </div>
                     </div>
                 </label>
-                <br><br>
                 <label class="checkbox" tabindex="0">
                     <input type="checkbox"/>
                     <div class="checkbox__control">
