--- a/src/next/src/index.html
+++ b/src/next/src/index.html
@@ -5,11 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
   <title>Stencil Component Starter</title>
   <!-- <script src="/build/mycomponent.js"></script> -->
-  <script type="module" src="/build/mycomponent.mjs.js"></script>
-  <script nomodule src="/build/mycomponent.js"></script>
+  <script type="module" src="/build/q-components.mjs.js"></script>
+  <script nomodule src="/build/q-components.js"></script>
 
 </head>
 <body>
+  <h1>Stencil one</h1>
 
+  <q-title>Header 1</q-title>
+  <q-title level="2">Header 2</q-title>
+  <q-title level="3">Header 3</q-title>
+  <q-title level="4">Header 4</q-title>
 </body>
 </html>
